[package]
name = "belalang_playground"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
belalang_core = { git = "https://github.com/secona/belalang", rev = "fa59beb4bfd0873d03119b2b5739c777848080aa" }
belalang_comp = { git = "https://github.com/secona/belalang", rev = "fa59beb4bfd0873d03119b2b5739c777848080aa" }
belalang_vm = { git = "https://github.com/secona/belalang", rev = "fa59beb4bfd0873d03119b2b5739c777848080aa" }
wasm-bindgen = "0.2.92"
