[package]
name = "belalang_playground"
version = "0.1.0"
edition = "2021"
publish = false
license = "Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
belalang_core = { git = "https://github.com/secona/belalang", rev = "0616819fd2474631ea777743921ff5eddd598842" }
belalang_comp = { git = "https://github.com/secona/belalang", rev = "0616819fd2474631ea777743921ff5eddd598842" }
belalang_vm = { git = "https://github.com/secona/belalang", rev = "0616819fd2474631ea777743921ff5eddd598842" }
wasm-bindgen = "0.2.92"
